# finance-dashboard

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  PI_SETUP.md  README.md  app.py  main.py  nginx.conf  pyproject.toml
.github/workflows/: lint.yml  test.yml
finance_dashboard/: __init__.py  config.py
finance_dashboard/categorization/: __init__.py  clusters.py  overrides.py  rules.py
finance_dashboard/data/: __init__.py  loader.py  parser.py
synthetic_data/: generate_data.py
tests/: conftest.py  test_categorization.py  test_override_keys.py  test_parser.py
