[project]
name = "finance-dashboard"
version = "0.1.0"
description = "Personal finance dashboard for DKB bank data"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "streamlit>=1.52.2",
]

[project.optional-dependencies]
fints = [
    "fints",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["finance_dashboard"]

[tool.uv.sources]
fints = { git = "https://github.com/raphaelm/python-fints.git" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
